# Stinger

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_revision.py  0002_api_keys.py  0003_encrypt_signing_secrets.py  0004_endpoint_half_open.py  0005_endpoint_max_concurrency.py  10dcaba18e00_initial_revision.py  5c4679cdc983_initial_revision.py
app/: auth.py  cli.py  config.py  crypto.py  ingest.py  main.py  management.py  models.py  pyproject.toml  reads.py  worker_main.py
app/api/: dashboard.py  deps.py  events.py  management.py
app/core/: db.py  limiter.py
app/delivery/: claim.py  http.py  record.py  signing.py  ssrf.py  worker.py
app/services/: claim_deliveries.py
app/static/: app.css
app/static/templates/: _delivery_rows.html  _delivery_table.html  _endpoint_card.html  _ep_content.html  _event_rows.html  _event_type_panel.html  _timeline.html  base.html  deliveries.html  delivery_detail.html  endpoints.html  event_types.html  events.html  login.html  not_found.html
app/web/: app.py  auth.py  deps.py  views.py
docs/: ARCHITECTURE.md  SECURITY.md  receiving-webhooks.md
tests/: conftest.py  test_auth.py  test_claim_deliveries.py  test_crypto.py  test_csrf.py  test_endpoint_concurrency_cap.py  test_half_open.py  test_http_attempt.py  test_ingest.py  test_listener_reconnect.py  test_management.py  test_management_api.py  test_reads.py  test_record_attempt.py  test_retry_after.py  test_rotation.py  test_signing.py  test_worker_end_to_end.py
