[project]
name = "stinger"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.1",
    "prometheus-client>=0.25.0",
    "prometheus-fastapi-instrumentator>=8.0.0",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-core>=2.46.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.50",
    "tenacity>=9.1.4",
    "testcontainers>=4.14.2",
    "uvicorn>=0.49.0",
    "uvloop>=0.22.1",
]
[tool.fastapi]
entrypoint = "app.main:app"
