[project]
name = "stinger"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "psycopg2>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]

# Test-only deps live here so `uv sync --no-dev` (used in the Dockerfile) keeps
# them out of the production image. uv installs this group by default locally.
[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "testcontainers>=4.14.2",
    "standardwebhooks>=1.0.1",   # only used by the signing interop test
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
